--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "npm": ">=2.15"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.1"
   }
 }
